--- a/DataStructuresAndAlgorithms/DataStructuresAndAlgorithms.csproj
+++ b/DataStructuresAndAlgorithms/DataStructuresAndAlgorithms.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{7AAFD7B3-1225-4420-94E4-2E8D73519F4E}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DataStructuresAndAlgorithms</RootNamespace>
+    <RootNamespace>Ds.Algorithms</RootNamespace>
     <AssemblyName>DataStructuresAndAlgorithms</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
